# pyhf

./: .ackrc  .buildinfo  .bumpversion.cfg  .coveragerc  .dockerignore  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  3b_full-run-2_tag21.2.87-1_ExpSyst_139000_CCA_Gtt_0L_B_bkg.json  AUTHORS  CITATION.cff  CITATION.md  CODE_OF_CONDUCT.md  CONTIRBUTING.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  WorkspaceVIz.ipynb  aaa  api.html  babel.html  citations.html  cli.html  codecov.yml  codemeta.json  contributors.html  development.html  examples.html  faq.html  genindex.html  index.html  (+23 more)
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: Bug-Report.md  Feature-Request.md  bug-report.md  bug-report.yml  bug_report.yml  config.yml  documentation-report.yml  feature-request.md  feature-request.yml  question.md  release-checklist.md  ~release-checklist.md
.github/PULL_REQUEST_TEMPLATE/: Bug-Fix.md  Feature.md
.github/workflows/: binder.yaml  binder.yml  bump-version.yml  ci-windows.yml  ci.yml  codeql-analysis.yml  cron.yml  dependencies-head.yml  deploy.yml  dev-tools.yml  docker.yml  docs.yml  lint.yml  list_likelihoods.yml  lower-bound-requirements.yml  merged.yml  notebooks.yml  publish-docker.yml  publish-package.yml  release_tests.yml  scorecard.yml  semantic-pr-check.yml  tag.yml
.pixi/: config.toml
1Lbb-likelihoods/: README.md
_generated/: pyhf.contrib.utils.download.html  pyhf.contrib.viz.brazil.html  pyhf.contrib.viz.brazil.plot_results.html  pyhf.default_backend.html  pyhf.default_optimizer.html  pyhf.exceptions.ImportBackendError.html  pyhf.exceptions.InvalidBackend.html  pyhf.exceptions.InvalidInterpCode.html  pyhf.exceptions.InvalidMeasurement.html  pyhf.exceptions.InvalidModel.html  pyhf.exceptions.InvalidModifier.html  pyhf.exceptions.InvalidNameReuse.html  pyhf.exceptions.InvalidOptimizer.html  pyhf.exceptions.InvalidPatchLookup.html  pyhf.exceptions.InvalidPatchSet.html  pyhf.exceptions.InvalidPdfData.html  pyhf.exceptions.InvalidPdfParameters.html  pyhf.exceptions.InvalidSpecification.html  pyhf.exceptions.InvalidWorkspaceOperation.html  pyhf.exceptions.PatchSetVerificationError.html  pyhf.get_backend.html  pyhf.infer.calculators.AsymptoticCalculator.html  pyhf.infer.calculators.AsymptoticTestStatDistribution.html  pyhf.infer.calculators.EmpiricalDistribution.html  pyhf.infer.calculators.ToyCalculator.html  pyhf.infer.calculators.generate_asimov_data.html  pyhf.infer.hypotest.html  pyhf.infer.intervals.upperlimit.html  pyhf.infer.mle.fit.html  pyhf.infer.mle.fixed_poi_fit.html  pyhf.infer.mle.twice_nll.html  pyhf.infer.test_statistics.q0.html  pyhf.infer.test_statistics.qmu.html  pyhf.infer.test_statistics.qmu_tilde.html  pyhf.infer.test_statistics.tmu.html  pyhf.infer.test_statistics.tmu_tilde.html  pyhf.infer.utils.create_calculator.html  pyhf.infer.utils.get_test_stat.html  pyhf.interpolators.code0.html  pyhf.interpolators.code1.html  (+51 more)
_modules/: index.html  pyhf.html
_modules/pyhf/: exceptions.html  infer.html  optimize.html  patchset.html  pdf.html  probability.html  readxml.html  simplemodels.html  utils.html  workspace.html  writexml.html
_sources/: babel.rst.txt  contributors.rst.txt  examples.rst.txt  learn.rst.txt
_sources/_generated/: pyhf.contrib.utils.download.rst.txt  pyhf.contrib.viz.brazil.plot_results.rst.txt  pyhf.contrib.viz.brazil.rst.txt  pyhf.default_backend.rst.txt  pyhf.default_optimizer.rst.txt  pyhf.exceptions.ImportBackendError.rst.txt  pyhf.exceptions.InvalidBackend.rst.txt  pyhf.exceptions.InvalidInterpCode.rst.txt  pyhf.exceptions.InvalidMeasurement.rst.txt  pyhf.exceptions.InvalidModel.rst.txt  pyhf.exceptions.InvalidModifier.rst.txt  pyhf.exceptions.InvalidNameReuse.rst.txt  pyhf.exceptions.InvalidOptimizer.rst.txt  pyhf.exceptions.InvalidPatchLookup.rst.txt  pyhf.exceptions.InvalidPatchSet.rst.txt  pyhf.exceptions.InvalidPdfData.rst.txt  pyhf.exceptions.InvalidPdfParameters.rst.txt  pyhf.exceptions.InvalidSpecification.rst.txt  pyhf.exceptions.InvalidWorkspaceOperation.rst.txt  (+72 more)
_static/: documentation_options.js
binder/: environment.yml  postBuild  requirements.txt  runtime.txt  trigger_binder.py
ci/: atlas_published_likelihoods.py
dev_tools/: doctest-on.sh  install-devtools.sh
docker/: Dockerfile
docs/: Makefile  api.rst  babel.rst  citations.rst  cli.rst  conf.py  contributors.rst  development.rst  examples.rst  faq.rst  generate_jupyterlite_iframe.py  index.rst  installation.rst  intro.rst  jupyterlite.rst  learn.rst  likelihood.rst  outreach.rst  pyolite.rst  release-checklist.rst  release-notes.rst  schema.rst  schemas  talks.rst
examples/: 2-bin_1-channel.json
governance/: ROADMAP.html
pyfhf/: __init__.py
pyhf/: __init__.py  commandline.py  constraints.py  events.py  interpolate.py  interpolation.py  paramsets.py  pdf.py  readxml.py  simplemodels.py  utils.py  version.py  writexml.py
src/: diff.txt  diffi.txt  mdiff.txt
tests/: conftest.py  constraints.txt  test_backend_consistency.py  test_backends.py  test_benchmark.py  test_calculator.py  test_cli.py  test_combined_modifiers.py  test_compat.py  test_constraints.py  test_custom_mods.py  test_differentiable_model_construction.py  test_events.py  test_examples.py  test_experimental.py  test_export.py  test_import.py  test_infer.py  test_init.py  test_interpolate.py  test_interpolation.py  test_jit.py  test_mixins.py  test_mode.py  test_modifiers.py  test_notebooks.py  test_optim.py  test_paramsets.py  test_paramviewer.py  test_patchset.py  test_pdf.py  test_probability.py  test_public_api.py  test_public_api_repr.py  test_regression.py  test_schema.py  test_scripts.py  test_simplemodels.py  test_stats.py  test_tensor.py  (+9 more)
validation/: StandardHypoTestDemo.py  makedata.py  run_cls.py  run_single.py  run_single_q0.py  run_toys.py  spec.json  standard_hypo_test_demo.py  templates.libsonnet  xmlimport_input_bkg.json
(+620 files in other folders)
