[metadata]
name = pyhf
version = 0.5.2
description = (partial) pure Python HistFactory implementation
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/scikit-hep/pyhf
author = Lukas Heinrich, Matthew Feickert, Giordon Stark
author_email = lukas.heinrich@cern.ch, matthew.feickert@cern.ch, gstark@cern.ch
license = Apache
license_file = LICENSE
keywords = physics fitting numpy scipy tensorflow pytorch jax
project_urls =
    Documentation = https://scikit-hep.org/pyhf/
    Source = https://github.com/scikit-hep/pyhf
    Tracker = https://github.com/scikit-hep/pyhf/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[bdist_wheel]
universal = 1

[options]
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    scipy>=1.4.0  # requires numpy, which is required by pyhf and tensorflow
    click>=6.0  # for console scripts,
    tqdm  # for readxml
    jsonschema>=3.2.0  # for utils
    jsonpatch
    pyyaml  # for parsing CLI equal-delimited options

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyhf = pyhf.cli:cli

[build_sphinx]
project = pyhf
source-dir = docs
build-dir = docs/_build
all-files = 1
warning-is-error = 1
