[metadata]
name = pyhf
description = pure-Python HistFactory implementation with tensors and autodiff
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/scikit-hep/pyhf
author = Lukas Heinrich, Matthew Feickert, Giordon Stark
author_email = lukas.heinrich@cern.ch, matthew.feickert@cern.ch, gstark@cern.ch
license = Apache
license_files = LICENSE
keywords = physics fitting numpy scipy tensorflow pytorch jax
project_urls =
    Documentation = https://pyhf.readthedocs.io/
    Source Code = https://github.com/scikit-hep/pyhf
    Issue Tracker = https://github.com/scikit-hep/pyhf/issues
    Release Notes = https://pyhf.readthedocs.io/en/stable/release-notes.html
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find_namespace:
package_dir =
    = src
include_package_data = True
python_requires = >=3.7
install_requires =
    scipy>=1.1.0 # requires numpy, which is required by pyhf and tensorflow
    click>=8.0.0  # for console scripts
    tqdm>=4.56.0  # for readxml
    jsonschema>=4.15.0  # for utils
    jsonpatch>=1.15
    pyyaml>=5.1  # for parsing CLI equal-delimited options
    importlib_resources>=1.4.0; python_version < "3.9"  # for resources in schema
    typing_extensions>=3.7.4.3; python_version == "3.7"  # for SupportsIndex

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyhf = pyhf.cli:cli

[flake8]
# E203: whitespace before ':'
# E402: module level import not at top of file
# E501: line too long
extend-ignore = E203, E402, E501
max-line-length = 88
